--- a/notebook/fit_joint.ipynb
+++ b/notebook/fit_joint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7e1da453-ef47-4920-b330-a7d9289e2f01",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000000.00 ]: 12-22 06:56  root            INFO     No pypower module detected, gridding with this method is unavailable\n",
-      "[ 000001.20 ]: 12-22 06:56  jax._src.xla_bridge INFO     Unable to initialize backend 'cuda': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "[ 000001.20 ]: 12-22 06:56  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "[ 000001.20 ]: 12-22 06:56  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-      "[ 000001.21 ]: 12-22 06:56  jax._src.xla_bridge WARNING  An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
-      "/tmp/ipykernel_1252480/968461804.py:6: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
+      "[ 000000.00 ]: 01-11 09:11  root            INFO     No pypower module detected, gridding with this method is unavailable\n",
+      "[ 000001.11 ]: 01-11 09:11  jax._src.xla_bridge INFO     Unable to initialize backend 'cuda': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "[ 000001.11 ]: 01-11 09:11  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "[ 000001.11 ]: 01-11 09:11  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "[ 000001.11 ]: 01-11 09:11  jax._src.xla_bridge WARNING  An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
+      "/tmp/ipykernel_2211158/968461804.py:6: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
       "  from pkg_resources import resource_filename\n"
      ]
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cd42c9d5-e123-4488-9fea-d87bc916771e",
    "metadata": {
     "tags": []
@@ -60,11 +60,7 @@
     "\n",
     "sn_data = pd.read_parquet(os.path.join(data_path,\"velocity_data.parquet\"))\n",
     "\n",
-    "# Removing bad fits\n",
-    "sn_data = sn_data[np.array(sn_data[\"status\"]) != False]\n",
-    "sn_data = sn_data[np.array(sn_data[\"status\"]) != None]\n",
-    "\n",
-    "coordinates_velocity = np.array([sn_data[\"ra\"], sn_data[\"dec\"], sn_data[\"como_dist\"]])\n",
+    "coordinates_velocity = np.array([sn_data[\"ra\"], sn_data[\"dec\"], sn_data[\"rcom_zobs\"]])\n",
     "data_velocity = sn_data.to_dict(\"list\")\n",
     "for key in data_velocity.keys():\n",
     "    data_velocity[key] = np.array(data_velocity[key])\n",
