--- a/notebook/fit_velocity.ipynb
+++ b/notebook/fit_velocity.ipynb
@@ -10,12 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000000.00 ]: 12-22 06:55  root            INFO     No pypower module detected, gridding with this method is unavailable\n",
-      "[ 000001.17 ]: 12-22 06:55  jax._src.xla_bridge INFO     Unable to initialize backend 'cuda': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "[ 000001.17 ]: 12-22 06:55  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "[ 000001.18 ]: 12-22 06:55  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-      "[ 000001.18 ]: 12-22 06:55  jax._src.xla_bridge WARNING  An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
-      "/tmp/ipykernel_1250400/968461804.py:6: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
+      "[ 000000.00 ]: 03-01 12:26  root            INFO     No pypower module detected, gridding with this method is unavailable\n",
+      "[ 000000.71 ]: 03-01 12:26  jax._src.xla_bridge INFO     Unable to initialize backend 'cuda': Unable to load CUDA. Is it installed?\n",
+      "[ 000000.71 ]: 03-01 12:26  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': NOT_FOUND: Could not find registered platform with name: \"rocm\". Available platform names are: CUDA\n",
+      "[ 000000.72 ]: 03-01 12:26  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "/tmp/ipykernel_11112/968461804.py:6: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
       "  from pkg_resources import resource_filename\n"
      ]
     }
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f81a2bc9-1d9e-4969-ac2d-0b5e56fd189c",
    "metadata": {
     "tags": []
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a30c697f-6597-450d-ac8b-6941e9ab8219",
    "metadata": {
     "tags": []
@@ -84,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000001.21 ]: 12-22 06:55  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.43e-01 seconds\n"
+      "[ 000032.63 ]: 03-01 12:27  root            INFO     Covariance matrix generated from flip with carreres23 model in 6.80e-01 seconds\n"
      ]
     }
    ],
@@ -173,6 +172,98 @@
     "\n",
     "\n",
     "minuit_fitter.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1892b4eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'flip.fitter' from '/home/blc56/Documents/Soft/flip/flip/fitter.py'>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib \n",
+    "importlib.reload(fitter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4ffe40b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "likelihood_type=\"multivariate_gaussian\"\n",
+    "likelihood_properties = {\n",
+    "        \"inversion_method\": \"cholesky\",\n",
+    "        \"velocity_type\": \"direct\"\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "parameter_dict = {\n",
+    "        \"fs8\": {\n",
+    "                \"randfun\": lambda size: np.random(0.4, 0.001, size=size),\n",
+    "                \"limit_low\" : 0.0,\n",
+    "                \"fixed\" : False,\n",
+    "                },\n",
+    "        \"sigv\": {\n",
+    "                \"randfun\": lambda size: np.random(200, 10, size=size),\n",
+    "                \"limit_low\" : 0.0,\n",
+    "                \"fixed\" : False,\n",
+    "                },\n",
+    "        }\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7515b51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6d54a11a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Give a backend file or an initial state",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/blc56/Documents/Soft/flip/notebook/fit_velocity.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/blc56/Documents/Soft/flip/notebook/fit_velocity.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m mcmc_fitter \u001b[39m=\u001b[39m fitter\u001b[39m.\u001b[39;49mFitMCMC\u001b[39m.\u001b[39;49minit_from_covariance(\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/blc56/Documents/Soft/flip/notebook/fit_velocity.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m         covariance_fit,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/blc56/Documents/Soft/flip/notebook/fit_velocity.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         data_velocity,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/blc56/Documents/Soft/flip/notebook/fit_velocity.ipynb#X23sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         parameter_dict,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/blc56/Documents/Soft/flip/notebook/fit_velocity.ipynb#X23sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         likelihood_type\u001b[39m=\u001b[39;49mlikelihood_type,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/blc56/Documents/Soft/flip/notebook/fit_velocity.ipynb#X23sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         likelihood_properties \u001b[39m=\u001b[39;49m likelihood_properties\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/blc56/Documents/Soft/flip/notebook/fit_velocity.ipynb#X23sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m )\n",
+      "File \u001b[0;32m~/Documents/Soft/flip/flip/fitter.py:366\u001b[0m, in \u001b[0;36mFitMCMC.init_from_covariance\u001b[0;34m(cls, covariance, data, parameter_dict, likelihood_type, likelihood_properties)\u001b[0m\n\u001b[1;32m    342\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    343\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39minit_from_covariance\u001b[39m(\n\u001b[1;32m    344\u001b[0m     \u001b[39mcls\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    349\u001b[0m     likelihood_properties\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    350\u001b[0m ):\n\u001b[1;32m    351\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    352\u001b[0m \u001b[39m    The init_from_covariance function is a class method that initializes the MCMC fitter from a covariance matrix.\u001b[39;00m\n\u001b[1;32m    353\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    364\u001b[0m \n\u001b[1;32m    365\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 366\u001b[0m     mcmc_fitter \u001b[39m=\u001b[39m \u001b[39mcls\u001b[39;49m(\n\u001b[1;32m    367\u001b[0m         covariance\u001b[39m=\u001b[39;49mcovariance,\n\u001b[1;32m    368\u001b[0m         data\u001b[39m=\u001b[39;49mdata,\n\u001b[1;32m    369\u001b[0m     )\n\u001b[1;32m    370\u001b[0m     likelihood \u001b[39m=\u001b[39m mcmc_fitter\u001b[39m.\u001b[39mget_likelihood(\n\u001b[1;32m    371\u001b[0m         parameter_dict,\n\u001b[1;32m    372\u001b[0m         likelihood_type\u001b[39m=\u001b[39mlikelihood_type,\n\u001b[1;32m    373\u001b[0m         likelihood_properties\u001b[39m=\u001b[39mlikelihood_properties,\n\u001b[1;32m    374\u001b[0m     )\n\u001b[1;32m    375\u001b[0m     mcmc_fitter\u001b[39m.\u001b[39mlikelihood \u001b[39m=\u001b[39m likelihood\n",
+      "File \u001b[0;32m~/Documents/Soft/flip/flip/fitter.py:338\u001b[0m, in \u001b[0;36mFitMCMC.__init__\u001b[0;34m(self, covariance, data, likelihood, sampler, **kwargs)\u001b[0m\n\u001b[1;32m    336\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(sampler, \u001b[39mstr\u001b[39m):\n\u001b[1;32m    337\u001b[0m     \u001b[39mif\u001b[39;00m sampler \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39memcee\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m--> 338\u001b[0m         sampler \u001b[39m=\u001b[39m EMCEESampler(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlikelihood, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    340\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msampler \u001b[39m=\u001b[39m sampler\n",
+      "File \u001b[0;32m~/Documents/Soft/flip/flip/fitter.py:417\u001b[0m, in \u001b[0;36mEMCEESampler.__init__\u001b[0;34m(self, likelihood, backend_file, p0)\u001b[0m\n\u001b[1;32m    414\u001b[0m         log\u001b[39m.\u001b[39madd(\u001b[39m\"\u001b[39m\u001b[39mCreate new file to store chains\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    416\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mp0 \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 417\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mGive a backend file or an initial state\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: Give a backend file or an initial state"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "mcmc_fitter = fitter.FitMCMC.init_from_covariance(\n",
+    "        covariance_fit,\n",
+    "        data_velocity,\n",
+    "        parameter_dict,\n",
+    "        likelihood_type=likelihood_type,\n",
+    "        likelihood_properties = likelihood_properties\n",
+    ")"
    ]
   },
   {
@@ -521,9 +612,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "corentin",
+   "display_name": "python3.10",
    "language": "python",
-   "name": "corentin"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -535,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
