--- a/notebook/fit_velocity.ipynb
+++ b/notebook/fit_velocity.ipynb
@@ -235,11 +235,17 @@
     "\n",
     "\n",
     "\n",
-    "mu, variance_mu = vectors.compute_observed_distance_modulus(\n",
+    "mu = vectors.compute_observed_distance_modulus(\n",
     "        data_velocity,\n",
     "        test_parameters[\"alpha\"],\n",
     "        test_parameters[\"beta\"],\n",
     "        test_parameters[\"M_0\"],\n",
+    "    )\n",
+    "\n",
+    "variance_mu = vectors.compute_observed_distance_modulus_error(\n",
+    "        data_velocity,\n",
+    "        test_parameters[\"alpha\"],\n",
+    "        test_parameters[\"beta\"],\n",
     "    )\n",
     "mask = mu > 0\n",
     "mask &= np.sqrt(variance_mu) - 0.1* mu < 0\n",
