--- a/notebook/fit_joint.ipynb
+++ b/notebook/fit_joint.ipynb
@@ -504,9 +504,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "corentin",
+   "display_name": "flip",
    "language": "python",
-   "name": "corentin"
+   "name": "flip"
   },
   "language_info": {
    "codemirror_mode": {
@@ -518,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
