try to capture free par for each model

--- a/notebook/fit_velocity.ipynb
+++ b/notebook/fit_velocity.ipynb
@@ -36,16 +36,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "7e1da453-ef47-4920-b330-a7d9289e2f01",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000000.00 ]: 09-12 13:45  root            INFO     No pypower module detected, gridding with this method is unavailable\n",
-      "[ 000000.04 ]: 09-12 13:45  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "[ 000000.04 ]: 09-12 13:45  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-      "/tmp/ipykernel_459041/629632113.py:7: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
+      "[ 000000.00 ]: 09-12 14:00  root            INFO     No pypower module detected, gridding with this method is unavailable\n",
+      "[ 000000.11 ]: 09-12 14:00  jax._src.xla_bridge INFO     Unable to initialize backend 'cuda': \n",
+      "[ 000000.11 ]: 09-12 14:00  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "[ 000000.12 ]: 09-12 14:00  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "[ 000000.12 ]: 09-12 14:00  jax._src.xla_bridge WARNING  An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n",
+      "/tmp/ipykernel_1250851/629632113.py:7: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
       "  from pkg_resources import resource_filename\n"
      ]
     }
@@ -362,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "a30c697f-6597-450d-ac8b-6941e9ab8219",
    "metadata": {
     "tags": []
@@ -372,10 +376,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/hpc/group/cosmology/blc56/miniconda3/envs/flip/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "/pscratch/sd/b/bastienc/Soft/.miniconda3/envs/flip/lib/python3.11/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
       "  self.pid = os.fork()\n",
-      "[ 000337.02 ]: 09-12 13:50  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.12e+00 seconds\n",
-      "[ 000338.17 ]: 09-12 13:50  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.16e+00 seconds\n"
+      "[ 000004.58 ]: 09-12 14:01  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.26e+00 seconds\n",
+      "[ 000005.72 ]: 09-12 14:01  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.14e+00 seconds\n"
      ]
     }
    ],
@@ -398,26 +402,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "15ff4029-d523-4e7b-9c3f-19ca7930fa7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aadfe50e-2d94-444c-aabf-ecf50b5a9228",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flip_base"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f494a162-cdc0-44ab-bde2-0ebd9805726c",
    "metadata": {},
@@ -427,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "556ad2da-dbff-48b2-ad69-24695dda48f2",
    "metadata": {
     "tags": []
@@ -437,11 +421,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000632.80 ]: 09-12 13:55  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
+      "[ 000010.12 ]: 09-12 14:01  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
       "│                                Migrad                                   │\n",
       "├──────────────────────────────────┬──────────────────────────────────────┤\n",
       "│ FCN = 1.374e+04                  │              Nfcn = 33               │\n",
-      "│ EDM = 3.61e-05 (Goal: 0.0002)    │            time = 3.1 sec            │\n",
+      "│ EDM = 3.61e-05 (Goal: 0.0002)    │            time = 4.2 sec            │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
       "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
@@ -466,10 +450,10 @@
     {
      "data": {
       "text/plain": [
-       "{'fs8': 0.3527405014392139, 'sigv': 199.53887827515106}"
+       "{'fs8': 0.3527405014401131, 'sigv': 199.53887827514978}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,31 +507,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9c22818b-2e8e-4bd3-a546-7f0c4e1a1b67",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/hpc/group/cosmology/blc56/miniconda3/envs/flip/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-      "  self.pid = os.fork()\n",
-      "[ 000859.90 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.20e+00 seconds\n",
-      "[ 000861.09 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.19e+00 seconds\n",
-      "[ 000862.35 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.26e+00 seconds\n",
-      "[ 000863.62 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.26e+00 seconds\n",
-      "[ 000864.82 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.21e+00 seconds\n",
-      "[ 000866.09 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.26e+00 seconds\n",
-      "[ 000867.35 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.26e+00 seconds\n",
-      "[ 000868.61 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.25e+00 seconds\n",
-      "[ 000869.87 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.26e+00 seconds\n",
-      "[ 000871.16 ]: 09-12 13:59  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.29e+00 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sigmau_list = np.linspace(10.0, 20.0,10)\n",
     "covariance_list = []\n",
@@ -571,57 +536,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "5034bd62-9be1-4b41-9c12-b1e45cd7c8a7",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[ 000889.82 ]: 09-12 14:00  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
-      "│                                Migrad                                   │\n",
-      "├──────────────────────────────────┬──────────────────────────────────────┤\n",
-      "│ FCN = 1.374e+04                  │              Nfcn = 53               │\n",
-      "│ EDM = 0.000168 (Goal: 0.0002)    │            time = 7.3 sec            │\n",
-      "├──────────────────────────────────┼──────────────────────────────────────┤\n",
-      "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
-      "├──────────────────────────────────┼──────────────────────────────────────┤\n",
-      "│     SOME parameters at limit     │           Below call limit           │\n",
-      "├──────────────────────────────────┼──────────────────────────────────────┤\n",
-      "│             Hesse ok             │         Covariance accurate          │\n",
-      "└──────────────────────────────────┴──────────────────────────────────────┘\n",
-      "┌───┬──────┬───────────┬───────────┬────────────┬────────────┬─────────┬─────────┬───────┐\n",
-      "│   │ Name │   Value   │ Hesse Err │ Minos Err- │ Minos Err+ │ Limit-  │ Limit+  │ Fixed │\n",
-      "├───┼──────┼───────────┼───────────┼────────────┼────────────┼─────────┼─────────┼───────┤\n",
-      "│ 0 │ fs8  │   0.366   │   0.027   │            │            │    0    │         │       │\n",
-      "│ 1 │ sigv │    201    │     5     │            │            │    0    │         │       │\n",
-      "│ 2 │ sigu │   17.0    │    2.9    │            │            │   13    │   17    │       │\n",
-      "└───┴──────┴───────────┴───────────┴────────────┴────────────┴─────────┴─────────┴───────┘\n",
-      "┌──────┬────────────────────────────┐\n",
-      "│      │      fs8     sigv     sigu │\n",
-      "├──────┼────────────────────────────┤\n",
-      "│  fs8 │ 0.000704 -40.9e-3   0.1e-3 │\n",
-      "│ sigv │ -40.9e-3     29.7   0.0048 │\n",
-      "│ sigu │   0.1e-3   0.0048  0.00241 │\n",
-      "└──────┴────────────────────────────┘\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'fs8': 0.3661449112566474,\n",
-       " 'sigv': 200.81242637187893,\n",
-       " 'sigu': 16.999724606919987}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "likelihood_type=\"multivariate_gaussian_interp1d\"\n",
     "likelihood_properties = {\"inversion_method\": \"cholesky\",\n",
@@ -993,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
