--- a/flip/covariance/rcrk24/main.tex
+++ b/flip/covariance/rcrk24/main.tex
@@ -10,75 +10,78 @@
  \maketitle
 
 \section{Model Description}
-The {\tt rcrk24} model includes redshift dependence and uses the first-order approximation for the evolution of growth
+The distinguishing features of the {\tt rcrk24} model are
+\begin{itemize}
+\item Includes redshift dependence.
+\item Uses the first-order approximation for the evolution of growth
 \begin{equation}
 {P_{xy}} = {\sigma^2_8} \frac{P^{(f)}_{xy}}{\sigma^{2(f)}_8},
 \end{equation}
 where the ${}^{(f)}$ superscript refers to the input fiducial model.
+\item
+The background expansion history, specifically $H(a)$ is assumed to be known and so is not dependent
+on any model parameters.
+\end{itemize}
 
-For observables $\alpha$, $\beta$ at $z_1$, $z_2$.
+For observables $\alpha$, $\beta$ at $z_1$, $z_2$
 \begin{equation}
-P_{\alpha\beta}(z_1,z_2)= A_\alpha(z_1) A_\beta(z_2) \frac{P^{(f)}_{xy}}{\sigma^{2(f)}_8}
+P_{\alpha\beta}(z_1,z_2)= A_\alpha(z_1) A_\beta(z_2) \frac{P^{(f)}_{xy}}{\sigma^{2(f)}_8}.
 \end{equation}
-The implementation in {\tt flip} is based on specifying $A_\alpha$ in {\tt coefficients.get\_coefficients} and
-its partial derivatives in {\tt fisher\_terms.get\_partial\_derivative\_coefficients}.
+$A_\alpha$ are the product of several terms.
+These terms and their partial derivatives are implemented in {\tt coefficients}.
+\footnote{Though logically the partial derivatives would be implemented in
+{\tt fisher\_terms}, it is easier to maintain consistency by keeping everything in the same file.}
+$A_\alpha$ is calculated in {\tt coefficients.get\_coefficients} and the partials
+of $A_\alpha$ are calculated in {\tt fisher\_terms.get\_partial\_derivative\_coefficients}.
 
+\begin{itemize}
+\item $A_v(z) = a(z)H(z)f(z)\sigma_8(z)$.
+\item $A_\delta(z)$ not yet implemented.
+\end{itemize}
 \section{Variants}
 
 There are two variants:
 \begin{description}
-\item[growth\_rate] Constant $f\sigma_8$.
-\item[growth\_index] $f=\Omega_{M}^\gamma$ with free parameters $\Omega_{M0}$ and $\gamma$.
+\item[growth\_rate] $f\sigma_8=\text{constant}$.
+\item[growth\_index] $f=\Omega_{M}^\gamma$, $\sigma_8  = \sigma_{8,\text{cmb}}  e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}} \Omega^\gamma d\ln{a'}} $ with free parameters $\Omega_{M0}$ and $\gamma$.
 \end{description}
-In both variants, redshift dependence enters in the scale factor $a$ the Hubble parameter $H$.
-In the {\tt growth\_index} variant $\Omega_M$ is redshift dependent.
 
 \subsection{growth\_rate}
 
-The parameters that describe the model are 
-\begin{description}
-\item[fs8] $f\sigma_8$
-\end{description}
+The parameter that describes the model is
+{\tt fs8}: $f\sigma_8$.
 
 \subsubsection{$A_v$}
 \begin{align}
-A_{v}(z) & = (1+z)^{-1} H(z) f\sigma_8 \\
-\frac{\partial A_{v}}{\partial f\sigma_8} (z) & = (1+z)^{-1} H(z)
+A_{v}(z) & = a(z) H(z) f\sigma_8 \\
+\frac{\partial A_{v}}{\partial f\sigma_8} (z) & = a(z) H(z)
 \end{align}
 
 \subsection{growth\_index}
 The following functions are associated with the model
 \begin{align}
 \sigma_8(a) & = \sigma_{8,\text{cmb}}  e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}} \Omega^\gamma d\ln{a'}} \\
+\Omega & = \frac{\Omega_{M0} a^{-3}}{\Omega_{M0} a^{-3} + 1 - \Omega_{M0}}\\
 \frac{d\Omega}{d\Omega_{M0}} & = \frac{a^{-3}}{\Omega_{M0} a^{-3} + 1 - \Omega_{M0}} - \frac{\Omega_{M0} a^{-3}(a^{-3}-1)}{(\Omega_{M0} a^{-3} + 1 - \Omega_{M0})^2}.
 \end{align}
-They are implemented in {\tt flip\_terms.py}.
+The value of $ \sigma_{8,\text{cmb}}= 0.832 * 0.001176774706956903$ based on the PDG and the scale factor
+of at $z=1089.92$ for $\Omega_{M0}=0.3$ and $\gamma=0.5$.
 
-The value of $ \sigma_{8,\text{cmb}}$ is currently not hardwired but is left as a user-specified parameter.
-  A reasonable choice is $ \sigma_{8,\text{cmb}} = 0.832 * 0.001176774706956903$.
-
-The parameters that describe the model are 
-\begin{description}
-\item[gamma] $\gamma$
-\item[Om0] $\Omega_{M0}$
-\item[s8\_cmb]  $\sigma_{8,\text{cmb}}$
-\end{description}
+The parameters that describe the model are {\tt gamma}:$\gamma$; {\tt Om0}:$\Omega_{M0}$
 
 \subsubsection{$A_v$}
 
 \begin{align}
-A_{v}(z) & = (1+z)^{-1} H(z) \Omega^\gamma  \sigma_8(a) \\
-\frac{\partial A_{v}}{\partial \gamma} (z) & = (1+z)^{-1} H(z)
+A_{v}(z) & =a(z) H(z) \Omega^\gamma  \sigma_8(a) \\
+\frac{\partial A_{v}}{\partial \gamma} (z) & = a(z) H(z)
 \left( \ln{\Omega}   + 
  e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}}\left( \ln{\Omega} \right) \Omega^\gamma d\ln{a}}
 \right) \Omega^\gamma  \sigma_8(a) \\
-\frac{\partial A_{v}}{\partial \Omega_0} (z) & = (1+z)^{-1} H(z) 
+\frac{\partial A_{v}}{\partial \Omega_0} (z) & =a(z)  H(z) 
 \left( \gamma  \frac{d\Omega}{d\Omega_{M0}} \Omega^{-1}  + 
  e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}}\gamma \frac{d\Omega}{d\Omega_{M0}} \Omega^{\gamma-1} d\ln{a'}}
 \right) \Omega^\gamma  \sigma_8(a).
 \end{align}
-$A_v$ is implemented in {\tt coefficients.get_coefficients}.
-The partial derivatives are implemented in both {\tt fisher_terms.get\_partial\_derivative\_coefficeints} and {\tt flip\_terms}.
 
 For numerical efficiency it is useful to use
 \begin{align}
@@ -87,166 +90,9 @@ For numerical efficiency it is useful to use
 \end{align}
 and
 \begin{equation}
-\int_{\ln{a}}^1 \Omega_M^\gamma d\ln{a'} \approx -\ln{a} \left[\Omega_{M0}^\gamma + \Omega_{M0}^\gamma 3\gamma(1-\Omega_{M0} )\right] 
-- (1-a) \Omega_{M0}^\gamma 3\gamma (1-\Omega_{M0}) d\ln{x}.
+\int_{\ln{a}}^0 \Omega^\gamma d\ln{a'} \approx -\ln{a} \left[\Omega_{M0}^\gamma + \Omega_{M0}^\gamma 3\gamma(1-\Omega_{M0} )\right] 
+- (1-a) \Omega_{M0}^\gamma 3\gamma (1-\Omega_{M0}).
 \end{equation}
-to approximate $A$ and its partial derivatives.  These are implemented in {\tt flip\_terms}, where there is a hardwired variable {\tt exact=False} that
-makes the code run using approximations by default.
+to approximate $A$ and its partial derivatives (though implemented in code I am too lazy to write this in LaTeX for the moment).  This solution is the default as hardwired in {\tt fisher\_terms.exact=False}.  Making this configurable requires some work.
 
-flip has a fiducial power spectrum $P^F_{xy}$ at $z=0$
-with $\sigma_8^F$,
-where $x,y \in \{g, \theta \}$.  The convention
-is to normalize this so that what is really available is
-$\mathcal{P}^F_{xy} = \sigma_8^{F\,-2} P^F_{xy}$.
-
-In linear theory the
-power spectrum is proportional to $\sigma_8$ as a function of redshift, and the $\alpha \beta$ power
-spectrum is some factor times the $xy$ power spectrum, so
-\begin{align}
-    P_{\alpha,\beta}(z_1,z_2;p)
-    &=
-    \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)}
-    \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)}
-    A_{\alpha,\beta}(z_1,z_2;p) P_{x,y}(z_1=0, z_2=0;p) \\    
- & =     \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)}
-    \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)}
-    A_{\alpha,\beta}(z_1,z_2;p)
-    \frac{P_{xy}(z_1=0, z_2=0;p)}
- {P^F_{xy}} P^F_{xy} \\
-  & = \left(\sigma_8^{F}\right)^2 \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)}
-    \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)}
-    A_{\alpha,\beta}(z_1,z_2;p)
-    \frac{P_{xy}(z_1=0, z_2=0;p)}
- {P^F_{xy}}  \mathcal{P}^F_{xy}.
-\end{align}
-For example $A_{vv}=(aHf)(z_1)(aHf)(z_2)$.
-
-In flip the power spectrum is constructed as
-\begin{align}
-    P_{\alpha,\beta}(z_1,z_2;p) = A_{\alpha,\beta}(z_1,z_2, p) B_{\alpha,\beta}(z) \mathcal{P}^F_{xy},
-\end{align}
-where $B_{\alpha,\beta}$ is defined by the method {\tt power\_spectrum\_amplitude\_function} define in
-{\tt flip\_terms.py} and
-the combination $A_{\alpha,\beta}(p) B_{\alpha,\beta}(z)$ is given by the variable {\tt coefficient\_vector}
-defined in the file {\tt coefficient.py}.
-Given this convention,
-\begin{equation}
-    B_{\alpha,\beta}(z;p) = \left(\sigma_8^{F}\right)^2 \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)}
-    \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)}
-    \frac{P_{xy}(z_1=0, z_2=0;p)}
- {P^F_{xy}}. 
-\end{equation}
-The dependence of $B$ on $p$, is important to recognized: $B$ contributes to terms in the Fisher Matrix calculation and the current flip API does not have
-$B$ as a function of $p$.
-
-For now flip assumes that $P^F_{xy}$ is at $z=0$ and the shape of the power spectrum is model independent.  Then
-\begin{equation}
-    \frac{P_{xy}(z_1=0, z_2=0;p)} 
- {P^F_{xy}} = \left(\frac{\sigma_8(0; p)}{\sigma^F_{8}} \right)^2
-\end{equation}
-and
-\begin{equation}
-    B_{\alpha,\beta}(z;p) = \sigma_8(z_1; p)
-    \sigma_8(z_2; p). 
-\end{equation}
-
-
-By definition
-$\sigma_8(z) = \sigma_{8,0} \exp{\int_1^a f(x;p) d\ln(x)}$ so
-\begin{equation}
-    \frac{d \sigma_8}{dp} = \sigma_8 \frac{d
-    \left(\int_1^a f d\ln(x)\right)} {dp}
-\end{equation}
-
-For the case where $f=\Omega_M^\gamma$
-\begin{equation}
- \int^a_1 \frac{dx}{x}\,\Omega(x)^\gamma \approx \ln a \,\left[\Omega_0^\gamma + \Omega_0^\gamma 3\gamma(1-\Omega_0)\right] + (1-a) \Omega_0^\gamma 3\gamma(1-\Omega_0)
-\end{equation}
-
-For the case where $f\sigma_8=c$
-is assumed to be constant
-\begin{align}
-\sigma_8 & = c \left( c^{-1}\sigma_{8,0} + \ln{a}\right) \\
-f & = \frac{d\ln{\sigma_8}}{d\ln{a}}  = \frac{1}{  c^{-1}\sigma_{8,0} + \ln{a}}
-\end{align}
-
-
-\paragraph{Tentative correction}
-\
-
-
-Without normalizing power spectrum, we have from theory
-
-\begin{equation}
-       P_{vv}(z_1,z_2;p) = (aHf)(z_1)(aHf)(z_2) P_{\theta\theta}(z_1, z_2;p) 
-\end{equation}
-
-For the models we developed until now, we were not accounting for redshift dependency (only at $z=0$). We normalize the power spectrum $P_{\theta\theta}$ by $\sigma_8^F$ so that the parameter to fit is not $f$ but $f\sigma_8$. It means that for this model we have:
-
-\begin{equation}
-       P_{vv}(z;p) = (H_0)^2 (f\sigma_8)^2 \frac{P_{\theta\theta}(z=0;p)}{\sigma_8^{F, 2}} = (H_0)^2 (f\sigma_8)^2  \mathcal{P}^F_{\theta\theta}(z=0;p)
-\end{equation}
-
-\noindent taking the previous notation $\mathcal{P}^F_{xy} = \sigma_8^{F\,-2} P^F_{xy}$. The only parameter fitted here is $f\sigma_8$ at redshift $z=0$. There is one assumption on those models: we are not considering the power spectrum dependency on other parameters $p$, i.e. we are considering that 
-$\mathcal{P}_{\theta\theta}(z=0;p) = \mathcal{P}^F_{\theta\theta}(z=0)$. This can be easily extended to fitting at a redshift $z \neq 0$.
-
-
-Now let's develop a full model for the redshift dependency. We want to measure $f\sigma_8$ at redshift $z=0$ for objects located at different redshifts ($z_1$, $z_2$). 
-
-\begin{align}
-    P_{vv}(z_1,z_2;p)
-    &= (aHf)(z_1)(aHf)(z_2) P_{\theta\theta}(z_1, z_2;p) \\    
- & = (aHf)(z_1)(aHf)(z_2)  \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)} \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)} P_{\theta\theta}(z=0;p) \\
- & = (aHf)(z_1)(aHf)(z_2)  \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)} \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)} \frac{P_{\theta\theta}(z=0;p)}{P^{F}_{\theta\theta}(z=0)} P^{F}_{\theta\theta}(z=0) \\
- & = (aHf\sigma_8)(z_1)(aHf\sigma_8)(z_2) \frac{P_{\theta\theta}(z=0;p)}{\sigma_{8}(0; p)^2 P^{F}_{\theta\theta}(z=0)} P^{F}_{\theta\theta}(z=0) \\
- & = (aHf\sigma_8)(z_1)(aHf\sigma_8)(z_2) \frac{\sigma_{8}^{F\,2} }{\sigma_{8}(0; p)^2 } \frac{P_{\theta\theta}(z=0;p)}{P^{F}_{\theta\theta}(z=0)} \mathcal{P}^{F}_{\theta\theta}(z=0) 
-\end{align}
-
-
-
-
-\begin{align}
-    P_{vv}(z_1,z_2;p)
-    &= (aHf)(z_1)(aHf)(z_2) P_{\theta\theta}(z_1, z_2;p) \\    
- & = (aH)(z_1) (aH)(z_2) \frac{f(z_1)f(z_2)}{f(0)f(0)}  f(0)f(0) \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)} \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)} P_{\theta\theta}(z=0;p) \\
- & = (aH)(z_1) (aH)(z_2)  (f\sigma_8)^2 \frac{f\sigma_8(z_1; p)}{f\sigma_{8}(0; p)} \frac{f\sigma_8(z_2; p)}{f\sigma_{8}(0; p)} \mathcal{P}_{\theta\theta}(z=0;p) \\ 
- & = (aH)(z_1) (aH)(z_2)  (f\sigma_8)^2 \frac{f\sigma_8(z_1; p)}{f\sigma_{8}(0; p)} \frac{f\sigma_8(z_2; p)}{f\sigma_{8}(0; p)} \frac{P_{\theta\theta}(z=0;p)}{P^{F}_{\theta\theta}(z=0)} \mathcal{P}^{F}_{\theta\theta}(z=0) \\ 
-\end{align}
-
-
-Here we kept a $f\sigma_8$ modeling (i.e. no growth index) and we are considering the impact of $p$ on the power spectrum. The power spectrum amplitude term is:
-
-\begin{equation}
-    B_{vv}(p) = (aH)(z_1) (aH)(z_2)  \frac{f\sigma_8(z_1; p)}{f\sigma_{8}(0; p)} \frac{f\sigma_8(z_2; p)}{f\sigma_{8}(0; p)} \frac{P_{\theta\theta}(z=0;p)}{P^{F}_{\theta\theta}(z=0)}
-\end{equation}
-
-Going back to the previous flip models, with $z_1 = z_2 = 0$, and the dependence on $p$ of the power spectrum unaccounted, we get the power\_spectrum\_amplitude\_function $B_{vv} = H_0^2$, and coefficients\_dict['vv'] = $f \sigma_8^F$. We accounted for the $B_{vv}$ term by multiplying the covariance by $100^2$, and expressing all coordinates in Mpc.$h^{-1}$. 
-
-
-We want to go for a growth index modeling, which is more appropriate for a redshift dependency, as it will make clearer some dependency on $p$. 
-
-\begin{align}
-    P_{vv}(z_1,z_2;p)
-    &= (aHf)(z_1)(aHf)(z_2) P_{\theta\theta}(z_1, z_2;p) \\ 
-    &= (aH)(z_1)(aH)(z_2) \Omega_{m}(z_1)^\gamma \Omega_{m}(z_2)^\gamma P_{\theta\theta}(z_1, z_2;p) \\  
-    &= (aH)(z_1)(aH)(z_2) \Omega_{m}(0)^{2\gamma} \left(\frac{\Omega_{m}(z_1) \Omega_{m}(z_2)}{\Omega_{m}(0)^{2}}\right)^\gamma \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)} \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)} P_{\theta\theta}(z=0;p) \\  
- & = (aH)(z_1)(aH)(z_2) \Omega_{m}(0)^{2\gamma} \sigma_8^2 \left(\frac{\Omega_{m}(z_1) \Omega_{m}(z_2)}{\Omega_{m}(0)^{2}}\right)^\gamma   \\ 
- &  \frac{P_{\theta\theta}(z=0;p)}{P^{F}_{\theta\theta}(z=0)} \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)} \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)} \mathcal{P}^{F}_{\theta\theta}(z=0) \\ 
-\end{align}
-
-And we obtain:
-
-\begin{equation}
-    B_{vv}(p) = (aH)(z_1)(aH)(z_2)\left(\frac{\Omega_{m}(z_1) \Omega_{m}(z_2)}{\Omega_{m}(0)^{2}}\right)^\gamma  \frac{P_{\theta\theta}(z=0;p)}{P^{F}_{\theta\theta}(z=0)} \frac{\sigma_8(z_1; p)}{\sigma_{8}(0; p)} \frac{\sigma_8(z_2; p)}{\sigma_{8}(0; p)} 
-\end{equation}
-
-Here, if we are considering that the variation of power spectra on $p$ only depends on $\Omega_{m}$ (i.e. considering flat lcdm for this second order effect), the three parameters to fit are $\Omega_{m}$, $\gamma$, and $\sigma_8$.
-
-
-
-Summary
-\begin{itemize}
-    \item $\text{coefficients\_dict['vv']} = aHf$
-    \item $\text{power\_spectrum\_amplitude\_function} = \sigma_8$ (current flip implementation) or $\sigma_8/\sigma_{8, fid}$ (candidate new implementation)
-\end{itemize}
 \end{document}
