add fisher density

--- a/notebook/fisher_density.ipynb
+++ b/notebook/fisher_density.ipynb
@@ -12,9 +12,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_334098/3270887735.py:5: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
+      "/tmp/ipykernel_470034/3270887735.py:5: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
       "  from pkg_resources import resource_filename\n",
-      "[ 000000.00 ]: 09-20 07:08  root            INFO     No pypower module detected, gridding with this method is unavailable\n"
+      "[ 000000.00 ]: 09-20 08:06  root            INFO     No pypower module detected, gridding with this method is unavailable\n"
      ]
     }
    ],
@@ -41,37 +41,28 @@
    },
    "outputs": [],
    "source": [
-    "sn_data = pd.read_parquet(os.path.join(data_path, \"velocity_data.parquet\"))"
+    "grid = pd.read_parquet(os.path.join(data_path,\"density_data.parquet\"))\n",
+    "grid_window = pd.read_parquet(os.path.join(data_path,\"grid_window_m.parquet\"))\n",
+    "\n",
+    "ktt, ptt = np.loadtxt(os.path.join(data_path,\"power_spectrum_tt.txt\"))\n",
+    "kmt, pmt = np.loadtxt(os.path.join(data_path,\"power_spectrum_mt.txt\"))\n",
+    "kmm, pmm = np.loadtxt(os.path.join(data_path,\"power_spectrum_mm.txt\"))\n",
+    "\n",
+    "sigmag_fiducial = 3.0\n",
+    "\n",
+    "power_spectrum_dict_bias = {\"gg\": [[kmm, pmm * np.array(grid_window[\"window_mm\"])**2]]}\n",
+    "power_spectrum_dict = {\n",
+    "    \"gg\": [\n",
+    "        [kmm, pmm * np.array(grid_window[\"window_mm\"])**2],\n",
+    "        [kmt, pmt * np.array(grid_window[\"window_mt\"])],\n",
+    "        [ktt, ptt]\n",
+    "    ]\n",
+    "                      }"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1362a094-9198-41a0-8000-7e87244dde70",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "sn_data = sn_data[np.array(sn_data[\"status\"]) != False]\n",
-    "sn_data = sn_data[np.array(sn_data[\"status\"]) != None]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "57b26c7a-ac8a-45b9-99e0-e18dc469a102",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "sn_data[\"dmu_error\"] = np.random.normal(0, 0.1, len(sn_data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "91f7e242-97d8-44bb-b136-2501d8e1e0eb",
    "metadata": {
     "tags": []
@@ -81,29 +72,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000003.11 ]: 09-20 07:08  jax._src.xla_bridge INFO     Unable to initialize backend 'cuda': \n",
-      "[ 000003.11 ]: 09-20 07:08  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "[ 000003.12 ]: 09-20 07:08  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-      "[ 000003.12 ]: 09-20 07:08  jax._src.xla_bridge WARNING  An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
+      "[ 000000.18 ]: 09-20 08:06  jax._src.xla_bridge INFO     Unable to initialize backend 'cuda': \n",
+      "[ 000000.18 ]: 09-20 08:06  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "[ 000000.19 ]: 09-20 08:06  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "[ 000000.19 ]: 09-20 08:06  jax._src.xla_bridge WARNING  An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data free parameters:  ['sigma_M']\n"
+      "Data free parameters:  []\n"
      ]
     }
    ],
    "source": [
-    "DataFisher = data_vector.FisherVelFromHDres(sn_data.to_dict(orient='list'))\n",
-    "print(\"Data free parameters: \", DataFisher.free_par)\n"
+    "DataFisher = data_vector.FisherDensity(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
+    "print(\"Data free parameters: \", DataFisher.free_par)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "735094e5-b2a4-4ac3-970b-4916be6a1686",
+   "execution_count": 7,
+   "id": "ca83b99e-eec2-4469-ae55-d70fc508218e",
    "metadata": {
     "tags": []
    },
@@ -114,43 +105,29 @@
      "text": [
       "/pscratch/sd/b/bastienc/Soft/.miniconda3/envs/flip/lib/python3.11/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
       "  self.pid = os.fork()\n",
-      "[ 000001.13 ]: 09-20 07:08  root            INFO     Covariance matrix generated from flip with rcrk24 model in 2.71e+00 seconds\n"
+      "[ 000025.56 ]: 09-20 08:08  root            INFO     Covariance matrix generated from flip with adamsblake20 model in 1.20e+00 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Covariance free parameters:  ['Om0', 'gamma', 'sigv']\n"
+      "Covariance free parameters:  ['beta_f', 'bs8']\n"
      ]
     }
    ],
    "source": [
-    "ktt, ptt = np.loadtxt(os.path.join(data_path, \"power_spectrum_tt.txt\"))\n",
-    "kmt, pmt = np.loadtxt(os.path.join(data_path, \"power_spectrum_mt.txt\"))\n",
-    "kmm, pmm = np.loadtxt(os.path.join(data_path, \"power_spectrum_mm.txt\"))\n",
+    "size_batch=10_000\n",
+    "number_worker=8\n",
+    "covariance_fit = DataFisher.compute_cov(\"adamsblake20\", power_spectrum_dict, size_batch=size_batch, \n",
+    "                                          number_worker=number_worker, additional_parameters_values=(sigmag_fiducial,))\n",
     "\n",
-    "sigmau_fiducial = 15\n",
-    "\n",
-    "power_spectrum_dict = {\"vv\": [[ktt, ptt * utils.Du(ktt, sigmau_fiducial) ** 2]]}\n",
-    "\n",
-    "### Compute covariance\n",
-    "size_batch = 10_000\n",
-    "number_worker = 16\n",
-    "\n",
-    "covariance_fit = DataFisher.compute_cov(\n",
-    "    \"rcrk24\",\n",
-    "    power_spectrum_dict,\n",
-    "    size_batch=size_batch,\n",
-    "    number_worker=number_worker,\n",
-    "    variant = 'growth_index'\n",
-    ")\n",
-    "print(\"Covariance free parameters: \", covariance_fit.free_par)\n"
+    "print(\"Covariance free parameters: \", covariance_fit.free_par)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "56cffe25-d883-450d-b777-b52dbcace973",
    "metadata": {
     "tags": []
@@ -164,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "10cd0f36-0c81-4230-937a-3813e7a63813",
    "metadata": {
     "tags": []
@@ -172,10 +149,8 @@
    "outputs": [],
    "source": [
     "parameter_dict = {\n",
-    "    \"gamma\": 0.55,\n",
-    "    \"Om0\": 0.3,\n",
-    "    \"sigv\": 200,\n",
-    "    \"sigma_M\": 0.12\n",
+    "    \"bs8\": 0.8,\n",
+    "    \"beta_f\": 0.3,\n",
     "}\n",
     "\n",
     "Fisher = fisher.FisherMatrix.init_from_covariance(\n",
@@ -192,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "df04ade7-7115-4435-a8ea-c80df6f86f9d",
+   "execution_count": 17,
+   "id": "b957fa92-0217-4012-847b-fee9105bb717",
    "metadata": {
     "tags": []
    },
@@ -202,8 +177,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fisher error on Omegam = 10.0565\n",
-      "Fisher error on gamma = 16.9737\n"
+      "Fisher error on fs8 = 0.0000\n",
+      "Fisher error on bs8 = 0.0322\n",
+      "Fisher error on beta_f = 0.0760\n"
      ]
     }
    ],
@@ -215,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "028958f0-4a56-4019-aaa0-9e6409039d9e",
+   "id": "487b8cb2-a22b-4883-9928-840fd17384e5",
    "metadata": {},
    "outputs": [],
    "source": []
