--- a/notebook/fit_density.ipynb
+++ b/notebook/fit_density.ipynb
@@ -71,10 +71,6 @@
     "grid = pd.read_parquet(os.path.join(data_path,\"density_data.parquet\"))\n",
     "grid_window = pd.read_parquet(os.path.join(data_path,\"grid_window_m.parquet\"))\n",
     "\n",
-    "coordinates_density = np.array([grid[\"ra\"], grid[\"dec\"], grid[\"rcom\"]])\n",
-    "data_density = {'density': np.array(grid[\"density\"]), \n",
-    "                'density_error': np.array(grid[\"density_err\"])}\n",
-    "\n",
     "DataDensity = data_vector.Density(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
     "\n",
     "ktt, ptt = np.loadtxt(os.path.join(data_path,\"power_spectrum_tt.txt\"))\n",
@@ -122,17 +118,7 @@
     "size_batch=10_000\n",
     "number_worker=8\n",
     "covariance_fit = DataDensity.compute_cov(\"adamsblake20\", power_spectrum_dict, size_batch=size_batch, \n",
-    "                                          number_worker=number_worker, additional_parameters_values=(sigmag_fiducial,))\n",
-    "\n",
-    "covariance_fit = covariance.CovMatrix.init_from_flip(\n",
-    "    \"adamsblake20\",\n",
-    "    \"density\",\n",
-    "    power_spectrum_dict,\n",
-    "    coordinates_density=coordinates_density,\n",
-    "    size_batch=size_batch,\n",
-    "    number_worker=number_worker,\n",
-    "    additional_parameters_values=(sigmag_fiducial,),\n",
-    ")"
+    "                                          number_worker=number_worker, additional_parameters_values=(sigmag_fiducial,))"
    ]
   },
   {
