--- a/flip/covariance/rcrk24/main.tex
+++ b/flip/covariance/rcrk24/main.tex
@@ -43,7 +43,7 @@ of $A_\alpha$ are calculated in {\tt fisher\_terms.get\_partial\_derivative\_coe
 There are two variants:
 \begin{description}
 \item[growth\_rate] $f\sigma_8=\text{constant}$.
-\item[growth\_index] $f=\Omega_{M}^\gamma$, $\sigma_8  = \sigma_{8,\text{cmb}}  e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}} \Omega^\gamma d\ln{a'}} $ with free parameters $\Omega_{M0}$ and $\gamma$.
+\item[growth\_index] $f=\Omega_{M}^\gamma$, $\sigma_8  = \sigma_{8,\text{cmb}}  e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}} \Omega_M^\gamma d\ln{a'}} $ with free parameters $\Omega_{M0}$ and $\gamma$.
 \end{description}
 
 \subsection{growth\_rate}
@@ -60,9 +60,9 @@ A_{v}(z) & = a(z) H(z) f\sigma_8 \\
 \subsection{growth\_index}
 The following functions are associated with the model
 \begin{align}
-\sigma_8(a) & = \sigma_{8,\text{cmb}}  e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}} \Omega^\gamma d\ln{a'}} \\
-\Omega & = \frac{\Omega_{M0} a^{-3}}{\Omega_{M0} a^{-3} + 1 - \Omega_{M0}}\\
-\frac{d\Omega}{d\Omega_{M0}} & = \frac{a^{-3}}{\Omega_{M0} a^{-3} + 1 - \Omega_{M0}} - \frac{\Omega_{M0} a^{-3}(a^{-3}-1)}{(\Omega_{M0} a^{-3} + 1 - \Omega_{M0})^2}.
+\sigma_8(a) & = \sigma_{8,\text{cmb}}  e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}} \Omega_M^\gamma d\ln{a'}} \\
+\Omega_M & = \frac{\Omega_{M0} a^{-3}}{\Omega_{M0} a^{-3} + 1 - \Omega_{M0}}\\
+\frac{d\Omega_M}{d\Omega_{M0}} & = \frac{a^{-3}}{\Omega_{M0} a^{-3} + 1 - \Omega_{M0}} - \frac{\Omega_{M0} a^{-3}(a^{-3}-1)}{(\Omega_{M0} a^{-3} + 1 - \Omega_{M0})^2}.
 \end{align}
 The value of $ \sigma_{8,\text{cmb}}= 0.832 * 0.001176774706956903$ based on the PDG and the scale factor
 of at $z=1089.92$ for $\Omega_{M0}=0.3$ and $\gamma=0.5$.
@@ -72,25 +72,25 @@ The parameters that describe the model are {\tt gamma}:$\gamma$; {\tt Om0}:$\Ome
 \subsubsection{$A_v$}
 
 \begin{align}
-A_{v}(z) & =a(z) H(z) \Omega^\gamma  \sigma_8(a) \\
+A_{v}(z) & =a(z) H(z) \Omega_M^\gamma  \sigma_8(a) \\
 \frac{\partial A_{v}}{\partial \gamma} (z) & = a(z) H(z)
-\left( \ln{\Omega}   + 
- e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}}\left( \ln{\Omega} \right) \Omega^\gamma d\ln{a}}
-\right) \Omega^\gamma  \sigma_8(a) \\
-\frac{\partial A_{v}}{\partial \Omega_0} (z) & =a(z)  H(z) 
-\left( \gamma  \frac{d\Omega}{d\Omega_{M0}} \Omega^{-1}  + 
- e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}}\gamma \frac{d\Omega}{d\Omega_{M0}} \Omega^{\gamma-1} d\ln{a'}}
+\left( \ln{\Omega_M}   + 
+ e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}}\left( \ln{\Omega_M} \right) \Omega_M^\gamma d\ln{a}}
+\right) \Omega_M^\gamma  \sigma_8(a) \\
+\frac{\partial A_{v}}{\partial \Omega_M0} (z) & =a(z)  H(z) 
+\left( \gamma  \frac{d\Omega_M}{d\Omega_{M0}} \Omega_M^{-1}  + 
+ e^{\int^{\ln{a}}_{\ln{a_\text{CMB}}}\gamma \frac{d\Omega_M}{d\Omega_{M0}} \Omega^{\gamma-1} d\ln{a'}}
 \right) \Omega^\gamma  \sigma_8(a).
 \end{align}
 
 For numerical efficiency it is useful to use
 \begin{align}
 \sigma_8(a) & =\sigma_{8,\text{cmb}}  
- e^{\int^1_{\ln{a_\text{CMB}}} \Omega^\gamma d\ln{a} - \int_{\ln{a}}^1 \Omega^\gamma d\ln{a'} } 
+ e^{\int^1_{\ln{a_\text{CMB}}} \Omega_M^\gamma d\ln{a} - \int_{\ln{a}}^1 \Omega_M^\gamma d\ln{a'} } 
 \end{align}
 and
 \begin{equation}
-\int_{\ln{a}}^0 \Omega^\gamma d\ln{a'} \approx -\ln{a} \left[\Omega_{M0}^\gamma + \Omega_{M0}^\gamma 3\gamma(1-\Omega_{M0} )\right] 
+\int_{\ln{a}}^0 \Omega_M^\gamma d\ln{a'} \approx -\ln{a} \left[\Omega_{M0}^\gamma + \Omega_{M0}^\gamma 3\gamma(1-\Omega_{M0} )\right] 
 - (1-a) \Omega_{M0}^\gamma 3\gamma (1-\Omega_{M0}).
 \end{equation}
 to approximate $A$ and its partial derivatives (though implemented in code I am too lazy to write this in LaTeX for the moment).  This solution is the default as hardwired in {\tt fisher\_terms.exact=False}.  Making this configurable requires some work.
