Improving notations in data vector

--- a/notebook/fisher_density.ipynb
+++ b/notebook/fisher_density.ipynb
@@ -87,7 +87,7 @@
     }
    ],
    "source": [
-    "DataFisher = data_vector.FisherDensity(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
+    "DataFisher = data_vector.FisherDens(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
     "print(\"Data free parameters: \", DataFisher.free_par)"
    ]
   },
