--- a/notebook/fit_density.ipynb
+++ b/notebook/fit_density.ipynb
@@ -71,7 +71,7 @@
     "grid = pd.read_parquet(os.path.join(data_path,\"density_data.parquet\"))\n",
     "grid_window = pd.read_parquet(os.path.join(data_path,\"grid_window_m.parquet\"))\n",
     "\n",
-    "DataDensity = data_vector.Density(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
+    "DataDensity = data_vector.Dens(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
     "\n",
     "ktt, ptt = np.loadtxt(os.path.join(data_path,\"power_spectrum_tt.txt\"))\n",
     "kmt, pmt = np.loadtxt(os.path.join(data_path,\"power_spectrum_mt.txt\"))\n",
