--- a/notebook/fit_joint.ipynb
+++ b/notebook/fit_joint.ipynb
@@ -85,7 +85,7 @@
     "                'density_error': np.array(grid[\"density_err\"])}\n",
     "\n",
     "\n",
-    "DataDensity = data_vector.Density(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
+    "DataDensity = data_vector.Dens(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
     "\n",
     "\n",
     "sn_data = pd.read_parquet(os.path.join(data_path,\"velocity_data.parquet\"))\n",
