--- a/notebook/fit_joint.ipynb
+++ b/notebook/fit_joint.ipynb
@@ -105,7 +105,7 @@
     "DataTrueVel = data_vector.DirectVel(data_velocity_true)\n",
     "\n",
     "# Create the Vel data vector\n",
-    "DataVel = data_vector.snia_vectors.VelFromSALTfit(sn_data.to_dict(orient='list'), vel_estimator='full')\n",
+    "DataVel = data_vector.snia_vectors.VelFromSALTfit(sn_data.to_dict(orient='list'), velocity_estimator='full')\n",
     "\n",
     "data_full = {}\n",
     "data_full.update(data_density)\n",
