--- a/notebook/fit_velocity.ipynb
+++ b/notebook/fit_velocity.ipynb
@@ -231,7 +231,7 @@
    ],
    "source": [
     "# Load the vector\n",
-    "DataVel = data_vector.snia_vectors.VelFromSALTfit(data_velocity.to_dict(orient='list'), vel_estimator='full', h=0.70)\n",
+    "DataVel = data_vector.snia_vectors.VelFromSALTfit(data_velocity.to_dict(orient='list'), velocity_estimator='full', h=0.70)\n",
     "\n",
     "test_parameters = {\"alpha\":0.14,\n",
     "                   \"beta\": 3.1,\n",
