debug +  prepare notebooks

--- a/notebook/fisher_density.ipynb
+++ b/notebook/fisher_density.ipynb
@@ -12,24 +12,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_470034/3270887735.py:5: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
-      "  from pkg_resources import resource_filename\n",
-      "[ 000000.00 ]: 09-20 08:06  root            INFO     No pypower module detected, gridding with this method is unavailable\n"
+      "[ 000000.00 ]: 06-09 10:29  root            INFO     No pypower module detected, gridding with this method is unavailable\n",
+      "[ 000000.11 ]: 06-09 10:29  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "[ 000000.12 ]: 06-09 10:29  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pkg_resources import resource_filename\n",
     "\n",
-    "from flip import fisher, utils, data_vector\n",
+    "from pathlib import Path\n",
+    "from flip import fisher, utils, data_vector, __flip_dir_path__\n",
     "from flip.covariance import covariance\n",
     "\n",
-    "flip_base = resource_filename(\"flip\", \".\")\n",
-    "data_path = os.path.join(flip_base, \"data\")"
+    "\n",
+    "flip_base = Path(__flip_dir_path__)\n",
+    "data_path = flip_base / 'data'"
    ]
   },
   {
@@ -41,12 +40,12 @@
    },
    "outputs": [],
    "source": [
-    "grid = pd.read_parquet(os.path.join(data_path,\"density_data.parquet\"))\n",
-    "grid_window = pd.read_parquet(os.path.join(data_path,\"grid_window_m.parquet\"))\n",
+    "grid = pd.read_parquet(data_path / \"density_data.parquet\")\n",
+    "grid_window = pd.read_parquet(data_path / \"grid_window_m.parquet\")\n",
     "\n",
-    "ktt, ptt = np.loadtxt(os.path.join(data_path,\"power_spectrum_tt.txt\"))\n",
-    "kmt, pmt = np.loadtxt(os.path.join(data_path,\"power_spectrum_mt.txt\"))\n",
-    "kmm, pmm = np.loadtxt(os.path.join(data_path,\"power_spectrum_mm.txt\"))\n",
+    "ktt, ptt = np.loadtxt(data_path / \"power_spectrum_tt.txt\")\n",
+    "kmt, pmt = np.loadtxt(data_path / \"power_spectrum_mt.txt\")\n",
+    "kmm, pmm = np.loadtxt(data_path / \"power_spectrum_mm.txt\")\n",
     "\n",
     "sigmag_fiducial = 3.0\n",
     "\n",
@@ -69,16 +68,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[ 000000.18 ]: 09-20 08:06  jax._src.xla_bridge INFO     Unable to initialize backend 'cuda': \n",
-      "[ 000000.18 ]: 09-20 08:06  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "[ 000000.19 ]: 09-20 08:06  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-      "[ 000000.19 ]: 09-20 08:06  jax._src.xla_bridge WARNING  An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -93,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "ca83b99e-eec2-4469-ae55-d70fc508218e",
    "metadata": {
     "tags": []
@@ -103,31 +92,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/pscratch/sd/b/bastienc/Soft/.miniconda3/envs/flip/lib/python3.11/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "/hpc/group/cosmology/blc56/miniconda3/envs/flip/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
       "  self.pid = os.fork()\n",
-      "[ 000025.56 ]: 09-20 08:08  root            INFO     Covariance matrix generated from flip with adamsblake20 model in 1.20e+00 seconds\n"
+      "[ 000015.00 ]: 06-09 10:30  root            INFO     Covariance matrix generated from flip with adamsblake20 model in 1.58e+01 seconds\n",
+      "[ 000015.00 ]: 06-09 10:30  root            INFO     Use self.init_covariance_sum before using self.compute_covariance_sum.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Covariance free parameters:  ['beta_f', 'bs8']\n"
+      "Covariance free parameters:  ['bs8', 'beta_f']\n"
      ]
     }
    ],
    "source": [
     "size_batch=10_000\n",
     "number_worker=8\n",
-    "covariance_fit = DataFisher.compute_cov(\"adamsblake20\", power_spectrum_dict, size_batch=size_batch, \n",
-    "                                          number_worker=number_worker, additional_parameters_values=(sigmag_fiducial,))\n",
+    "covariance_fit = DataFisher.compute_covariance(\"adamsblake20\", power_spectrum_dict, size_batch=size_batch, \n",
+    "                                              number_worker=number_worker, additional_parameters_values=(sigmag_fiducial,))\n",
     "\n",
     "print(\"Covariance free parameters: \", covariance_fit.free_par)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "56cffe25-d883-450d-b777-b52dbcace973",
    "metadata": {
     "tags": []
@@ -141,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "10cd0f36-0c81-4230-937a-3813e7a63813",
    "metadata": {
     "tags": []
@@ -167,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "b957fa92-0217-4012-847b-fee9105bb717",
    "metadata": {
     "tags": []
@@ -179,7 +169,7 @@
      "text": [
       "Fisher error on fs8 = 0.0000\n",
       "Fisher error on bs8 = 0.0322\n",
-      "Fisher error on beta_f = 0.0760\n"
+      "Fisher error on beta_f = 0.0761\n"
      ]
     }
    ],
@@ -187,14 +177,6 @@
     "for p, e in zip(parameter_name_list, ERR):\n",
     "    print(f\"Fisher error on {p} = {e:.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "487b8cb2-a22b-4883-9928-840fd17384e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -213,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
