--- a/notebook/fisher_vel.ipynb
+++ b/notebook/fisher_vel.ipynb
@@ -12,9 +12,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_334098/3270887735.py:5: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
-      "  from pkg_resources import resource_filename\n",
-      "[ 000000.00 ]: 09-20 07:08  root            INFO     No pypower module detected, gridding with this method is unavailable\n"
+      "[ 000000.00 ]: 06-09 10:34  root            INFO     No pypower module detected, gridding with this method is unavailable\n",
+      "[ 000000.07 ]: 06-09 10:34  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
+      "[ 000000.07 ]: 06-09 10:34  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     }
    ],
@@ -23,13 +23,14 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pkg_resources import resource_filename\n",
+    "from pathlib import Path\n",
     "\n",
-    "from flip import fisher, utils, data_vector\n",
+    "from flip import fisher, utils, data_vector, __flip_dir_path__\n",
     "from flip.covariance import covariance\n",
     "\n",
-    "flip_base = resource_filename(\"flip\", \".\")\n",
-    "data_path = os.path.join(flip_base, \"data\")"
+    "\n",
+    "flip_base = Path(__flip_dir_path__)\n",
+    "data_path = flip_base / 'data'"
    ]
   },
   {
@@ -41,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "sn_data = pd.read_parquet(os.path.join(data_path, \"velocity_data.parquet\"))"
+    "sn_data = pd.read_parquet(data_path / \"velocity_data.parquet\")"
    ]
   },
   {
@@ -78,16 +79,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[ 000003.11 ]: 09-20 07:08  jax._src.xla_bridge INFO     Unable to initialize backend 'cuda': \n",
-      "[ 000003.11 ]: 09-20 07:08  jax._src.xla_bridge INFO     Unable to initialize backend 'rocm': module 'jaxlib.xla_extension' has no attribute 'GpuAllocatorConfig'\n",
-      "[ 000003.12 ]: 09-20 07:08  jax._src.xla_bridge INFO     Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-      "[ 000003.12 ]: 09-20 07:08  jax._src.xla_bridge WARNING  An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -112,9 +103,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/pscratch/sd/b/bastienc/Soft/.miniconda3/envs/flip/lib/python3.11/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "/hpc/group/cosmology/blc56/miniconda3/envs/flip/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
       "  self.pid = os.fork()\n",
-      "[ 000001.13 ]: 09-20 07:08  root            INFO     Covariance matrix generated from flip with rcrk24 model in 2.71e+00 seconds\n"
+      "[ 000000.72 ]: 06-09 10:34  root            INFO     Covariance matrix generated from flip with rcrk24 model in 1.78e+00 seconds\n",
+      "[ 000000.74 ]: 06-09 10:34  root            INFO     Use self.init_covariance_sum before using self.compute_covariance_sum.\n"
      ]
     },
     {
@@ -126,10 +118,9 @@
     }
    ],
    "source": [
-    "ktt, ptt = np.loadtxt(os.path.join(data_path, \"power_spectrum_tt.txt\"))\n",
-    "kmt, pmt = np.loadtxt(os.path.join(data_path, \"power_spectrum_mt.txt\"))\n",
-    "kmm, pmm = np.loadtxt(os.path.join(data_path, \"power_spectrum_mm.txt\"))\n",
-    "\n",
+    "ktt, ptt = np.loadtxt(data_path / \"power_spectrum_tt.txt\")\n",
+    "kmt, pmt = np.loadtxt(data_path / \"power_spectrum_mt.txt\")\n",
+    "kmm, pmm = np.loadtxt(data_path / \"power_spectrum_mm.txt\")\n",
     "sigmau_fiducial = 15\n",
     "\n",
     "power_spectrum_dict = {\"vv\": [[ktt, ptt * utils.Du(ktt, sigmau_fiducial) ** 2]]}\n",
@@ -138,7 +129,7 @@
     "size_batch = 10_000\n",
     "number_worker = 16\n",
     "\n",
-    "covariance_fit = DataFisher.compute_cov(\n",
+    "covariance_fit = DataFisher.compute_covariance(\n",
     "    \"rcrk24\",\n",
     "    power_spectrum_dict,\n",
     "    size_batch=size_batch,\n",
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "10cd0f36-0c81-4230-937a-3813e7a63813",
    "metadata": {
     "tags": []
@@ -192,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "df04ade7-7115-4435-a8ea-c80df6f86f9d",
    "metadata": {
     "tags": []
@@ -202,8 +193,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fisher error on Omegam = 10.0565\n",
-      "Fisher error on gamma = 16.9737\n"
+      "Fisher error on Omegam = 5.6934\n",
+      "Fisher error on gamma = 9.6916\n"
      ]
     }
    ],
@@ -211,14 +202,6 @@
     "for p, e in zip(parameter_name_list, ERR):\n",
     "    print(f\"Fisher error on {p} = {e:.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "028958f0-4a56-4019-aaa0-9e6409039d9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -237,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
