Reorganization of the package to start the inclusion of other submodules: forward modeling, sbi

--- a/notebook/fisher_density.ipynb
+++ b/notebook/fisher_density.ipynb
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "grid = pd.read_parquet(data_path / \"density_data.parquet\")\n",
+    "grid = pd.read_parquet(data_path / \"data_density.parquet\")\n",
     "grid_window = pd.read_parquet(data_path / \"grid_window_m.parquet\")\n",
     "\n",
     "ktt, ptt = np.loadtxt(data_path / \"power_spectrum_tt.txt\")\n",
