--- a/notebook/fit_density.ipynb
+++ b/notebook/fit_density.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7e1da453-ef47-4920-b330-a7d9289e2f01",
    "metadata": {
     "tags": []
@@ -91,8 +91,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from pathlib import Path\n",
-    "from flip import fitter, plot_utils, data_vector, __flip_dir_path__\n",
-    "from flip.covariance import covariance, contraction\n",
+    "from flip import plot_utils, data_vector, __flip_dir_path__\n",
+    "from flip.covariance import covariance, contraction, fitter\n",
     "\n",
     "flip_base = Path(__flip_dir_path__)\n",
     "data_path = flip_base / \"data\"\n",
@@ -108,7 +108,7 @@
    },
    "outputs": [],
    "source": [
-    "grid = pd.read_parquet(data_path / \"density_data.parquet\")\n",
+    "grid = pd.read_parquet(data_path / \"data_density.parquet\")\n",
     "grid_window = pd.read_parquet(data_path / \"grid_window_m.parquet\")\n",
     "\n",
     "DataDensity = data_vector.Dens(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
